<?xml version="1.0"?>
<package format="2">
  <name>mc_fetch_description</name>
  <version>0.0.0</version>
  <description>The mc_fetch_description package</description>

  <maintainer email="iori@todo.todo">iori</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>fetch_description</depend>
  <depend>qhull-bin</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
